--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,4 +1,5 @@
-<h2>Resend unlock instructions</h2>
+<div class="container">
+  <h2>Resend unlock instructions</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
   <%= f.error_notification %>
@@ -17,3 +18,6 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+
+</div>
