--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,8 @@
 .navbar-lewagon {
   justify-content: space-between;
   background: white;
+  padding-right: 10px;
+  padding-left: 10px;
 }
 
 .navbar-lewagon .navbar-collapse {
