fixed the show of listing

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -3,11 +3,11 @@
       <div class="card-trip-infos">
         <h2><%= @listing.title %>'s Market</h2>
         </div>
-        <p>@listing.category </p>
-        <p>@listing.unit_price </p>
-        <p>@listing.quantity</p>
-        <p>@listing.description</p>
-        <p>@listing.expiry_date</p>
+        <p><%=@listing.category%></p>
+        <p><%=@listing.unit_price %></p>
+        <p><%=@listing.quantity%></p>
+        <p><%=@listing.description%></p>
+        <p><%=@listing.expiry_date%></p>
       </div>
     </div>
 
