--- a/app/views/shared/_card-product.html.erb
+++ b/app/views/shared/_card-product.html.erb
@@ -1,4 +1,5 @@
 <div class="card-product">
+  <%= render  %>
   <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
   <div class="card-product-infos">
     <h2>Product name</h2>
