--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -16,12 +16,12 @@
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
         <li class="nav-item active">
-          <%= link_to "My Cart", "#", class: "nav-link" %>
+          <button type="button" class="btn btn-success">
+          My Cart <span class="badge badge-light">0</span>
+        </button>
         </li>
-        <li class="nav-item">
-          <%= link_to "Profile", "#", class: "nav-link" %>
-        </li>
-        <li class="nav-item dropdown">
+
+        <li class="nav-item dropdown ml-3">
           <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <%= link_to "My Transaction History", "#", class: "dropdown-item" %>
