--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,11 +1,19 @@
-<div class="container">
-      <div class="listing">
-      <h4> Listings </h4>
-      <% @listings.each do |listing| %>
-        <div class="card-category">
-          <h4><%= link_to listing.title, listing_path(listing) %></h4>
-        </div>
-      <% end %>
-    </div>
+
+
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://source.unsplash.com/1600x900/?organic,vegetables,farmer)">
+  <h1>Welcome to <strong>U</strong>rban <strong>F</strong>armer <strong>O</strong>nline platform!</h1>
+  <p>Find the freshest produce from your neighbhourhood grocers, support small local UFO'ers</p>
+  <a class="btn btn-flat" href="/users/sign_up">Sign Up Today!</a>
+</div>
+
+
+
+<div class="listing">
+  <h4> Listings </h4>
+  <% @listings.each do |listing| %>
+  <div class="card-category">
+    <h4><%= link_to listing.title, listing_path(listing) %></h4>
   </div>
+  <% end %>
+</div>
 
