--- a/app/views/shared/_avatar.html.erb
+++ b/app/views/shared/_avatar.html.erb
@@ -1,1 +1,1 @@
-<img class="avatar-large" alt="avatar-large" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" />
+<img class="avatar-large" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" />
