done with advance crud for listings

--- a/app/views/listings/my_listings.html.erb
+++ b/app/views/listings/my_listings.html.erb
@@ -5,7 +5,7 @@
       <h4> Listings </h4>
         <% @listings.each do |listing| %>
           <div class="card-category">
-            <p><%= link_to listing.title, listing_path(@listing) %></p>
+            <p><%= link_to listing.title, listing_path(listing) %></p>
           </div>
         <% end %>
       </div>
