--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -20,3 +20,12 @@
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   text-align: center;
 }
+
+.banner a {
+  display: flex;
+  width: 50%;
+  background-color: white;
+  color: black;
+  opacity: 50%;
+  justify-content: center;
+}
