order items complete

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -9,7 +9,7 @@
         <p><%=@listing.description%></p>
         <p><%=@listing.expiry_date%></p>
         <%= simple_form_for([ @listing, @order_item ]) do |f| %>
-          <%= f.input :quantity, input_html: { min: 0, max: @listing.quantity, step: 1 } %>
+          <%= f.input :quantity, collection: 1..@listing.quantity, prompt: "Select Quantity" %>
           <%= f.submit "Add To Cart", method: :create %>
         <% end %>
         <p>Farmer's details:<%= @user.username %></p>
