--- a/app/views/shared/_card-product.html.erb
+++ b/app/views/shared/_card-product.html.erb
@@ -1,9 +1,13 @@
 <div class="card-product">
   <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
-  <div class="card-product-infos">
-    <h2><%= item.listing.title %></h2>
-    <p>Quantity: <%= item.quantity %></p>
-    <p>Price: $<%= item.amount %></p>
+  <div class="card-product-infos d-flex flex-column flex-grow-1">
+    <div class="row d-flex flex-row justify-content-between align-items-center px-3">
+      <h2><%= item.listing.title %></h2>
+      <div class="box">
+        <p>Quantity: <%= item.quantity %></p>
+        <p>Price: $<%= item.amount %></p>
+      </div>
+    </div>
     <p>Category: <%= item.listing.category %></p>
     <p>Seller: <%= item.listing.user.username %></p>
   </div>
