--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -16,9 +16,9 @@
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
         <li class="nav-item active">
-          <button type="button" class="btn btn-success">
-          My Cart <span class="badge badge-light">0</span>
-        </button>
+          <a href="/my-cart" class="btn btn-success">
+          My Cart <span class="badge badge-light"><%= current_user.order_items.count %></span>
+        </a>
         </li>
 
         <li class="nav-item dropdown ml-3">
