--- a/app/views/shared/_card-product.html.erb
+++ b/app/views/shared/_card-product.html.erb
@@ -1,5 +1,5 @@
 <div class="card-product">
-  <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
+  <img src="https://res.cloudinary.com/dcm2heeuf/image/upload/v1620723373/<%=item.listing.photo.key %>" />
   <div class="card-product-infos d-flex flex-column flex-grow-1">
     <div class="row d-flex flex-row justify-content-between align-items-center px-3">
       <h2><%= item.listing.title %></h2>
