--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -13,8 +13,7 @@
         <%= f.text_field :quantity%><br><br>
         <%= f.label :unit_price%><br>
         <%= f.text_field :unit_price%><br><br>
-        <%= f.label :expiry_date%><br>
-        <%= f.text_field :expiry_date%><br><br>
+        <%= f.input :expiry_date, as: :date %>
       </div>
       <div class="button">
         <%= f.submit "Add", class: "btn btn-primary"%>
