added delete function

--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -9,9 +9,6 @@
    <a class="btn btn-flat" href="/users/sign_up">Sign Up Today!</a>
    <% end %>
   </div>
-
-
-
 </div>
 
 <div class="cards">
@@ -20,7 +17,11 @@
     <% user = User.find(listing.user_id) %>
     <%= user.username %>
     <%= listing.expiry_date %>
-  <img class="card-img-top" src="https://res.cloudinary.com/dcm2heeuf/image/upload/v1620723373/<%=listing.photo.key %>")>
+    <% if listing.photo.attached? %>
+      <img class="card-img-top" src="https://res.cloudinary.com/dcm2heeuf/image/upload/v1620723373/<%=listing.photo.key %>")>
+    <% else %>
+      <img src="https://source.unsplash.com/400x300/?vegetables" />
+    <% end %>
   <div class="card-body">
     <h5 class="card-title"><strong><%= link_to listing.title, listing_path(listing) %></strong></h5>
     <p class="card-text">
