--- a/app/views/listings/my_listings.html.erb
+++ b/app/views/listings/my_listings.html.erb
@@ -7,6 +7,15 @@
           <div class="card-category">
             <p><%= link_to listing.title, listing_path(listing) %></p>
           </div>
+           <div class="listing-delete">
+          <%= link_to "Delete",
+            listing_path(listing),
+            method: :delete,
+            data: { confirm: "Are you sure?" } %>
+        </div>
+          <div class="listing-edit">
+            <%= link_to "Edit", edit_listing_path(listing) %>
+          </div>
         <% end %>
       </div>
 </div>
