--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -5,19 +5,18 @@
         <% if @listing.photo.attached? %>
           <%= cl_image_tag @listing.photo.key, height: 300, width: 400%>
         <% else %>
-          <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" />
+          <img src="https://source.unsplash.com/400x300/?vegetables" />
         <% end %>
         </div>
-
-        <p><%=@listing.category%></p>
-        <p><%=@listing.unit_price %></p>
-        <p><%=@listing.quantity%></p>
-        <p><%=@listing.description%></p>
-        <p><%=@listing.expiry_date%></p>
-        <%= simple_form_for([ @listing, @order_item ]) do |f| %>
-          <%= f.input :quantity, input_html: { min: 0, max: @listing.quantity, step: 1 } %>
-          <%= f.submit "Add To Cart", method: :create %>
-        <% end %>
+          <p><%=@listing.category%></p>
+          <p><%=@listing.unit_price %></p>
+          <p><%=@listing.quantity%></p>
+          <p><%=@listing.description%></p>
+          <p><%=@listing.expiry_date%></p>
+          <%= simple_form_for([ @listing, @order_item ]) do |f| %>
+            <%= f.input :quantity, input_html: { min: 0, max: @listing.quantity, step: 1 } %>
+            <%= f.submit "Add To Cart", method: :create %>
+          <% end %>
         <p>Farmer's details:<%= @user.username %></p>
       </div>
     </div>
