--- a/app/assets/stylesheets/components/_card-product.scss
+++ b/app/assets/stylesheets/components/_card-product.scss
@@ -30,3 +30,20 @@
 .card-product .card-product-infos {
   padding: 16px;
 }
+
+.card-product-big-avatar {
+  overflow: hidden;
+  height: 120px;
+  background: white;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  display: flex;
+  align-items: center;
+  padding: 20px;
+
+}
+
+.card-product-big-avatar img {
+  height: 100%;
+  width: 200px;
+  object-fit: cover;
+}
