--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,13 +1,12 @@
 // Import your components CSS files here.
 @import "alert";
 @import "avatar";
-@import "navbar";
 @import "banner";
 @import "button";
 @import "card-category";
 @import "card-product";
 @import "cards";
+@import "card";
+@import "image";
+@import "navbar";
 @import "search";
-
-
-
