--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -37,7 +37,7 @@
       <div class="row" style="margin-top: 20px; margin-bottom: 30px">
         <div class="col-sm-12">
           <%= simple_form_for([ @listing, @order_item ]) do |f| %>
-          <%= f.input :quantity, collection: 1..@listing.quantity, prompt: "Select Order Quantity", label: false %>
+          <%= f.input :quantity, collection: 1..@listing.quantity, prompt: false, label: "Select Quantity" %>
           <%= f.submit "Add To Cart", method: :create %>
           <small>(Quantity left: <%=@listing.quantity%>)</small>
           <% end %>
