--- a/app/views/order_items/my_cart.html.erb
+++ b/app/views/order_items/my_cart.html.erb
@@ -3,6 +3,9 @@
 <%= render "shared/card-product", item: item %>
 <% end %>
 <%= simple_form_for(@order) do |f| %>
+  <% @order_items.each do |oi| %>
+    <%= f.hidden_field :order_item_ids, multiple: true, value: oi.id %>
+  <% end %>
   <%= f.submit "Checkout", method: :create %>
 <% end %>
 
