--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Orders#index</h1>
-<p>Find me in app/views/orders/index.html.erb</p>
+<h1>Here are your items in cart</h1>
+<% @orders.each do |item| %>
+<%= render "shared/card-product", item: item %>
+<% end %>
