--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,7 +6,7 @@
 
   <form novalidate="novalidate" class="simple_form search" action="/" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="&#x2713;" />
     <div class="search">
-      <input class="form-control string required" type="text" name="search[query]" id="search_query" />
+      <input class="form-control string required" type="text" name="search_query" id="search_query" placeholder="search for vegetables"/>
       <button name="button" type="submit" class="fas fa-search"></button>
     </div>
   </form>
