--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,12 +5,14 @@
   <% end %>
 
   <form novalidate="novalidate" class="simple_form search" action="/" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="&#x2713;" />
+  <%= form_with url: "/", method: :get, local: true, class: 'simple_form search' do |form| %>
+    <%= form.select :category, ["Fresh Vegetables", "Frozen Vegetables", "Ready To Eat Salads", "Grow Your Own Microgreens", "Other Vegetables"], prompt: "Select category" %>
     <div class="search">
-      <input class="form-control string required" type="text" name="search_query" id="search_query" placeholder="search for vegetables"/>
-      <button name="button" type="submit" class="fas fa-search"></button>
+      <%= form.text_field :search_query, class: "form-control string required", id: "search_query", placeholder: "Vegetables" %>
+      <%= form.submit "Search", class: "search_icon" %>
     </div>
+  <% end %>
   </form>
-
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
