--- a/app/views/order_items/my_cart.html.erb
+++ b/app/views/order_items/my_cart.html.erb
@@ -1,11 +1,16 @@
-<h1>Here are your items in cart</h1>
-<% @order_items.each do |item| %>
-<%= render "shared/card-product", item: item %>
-<% end %>
-<%= simple_form_for(@order) do |f| %>
-  <% @order_items.each do |oi| %>
-    <%= f.hidden_field :order_item_ids, multiple: true, value: oi.id %>
+<% if @order_items.empty? %>
+  <h1>Your cart is empty.</h1>
+  <h2>🥕 aint gonna add themselves!</h2>
+  <% else %>
+  <h1>Here are your items in cart</h1>
+  <% @order_items.each do |item| %>
+  <%= render "shared/card-product", item: item %>
   <% end %>
-  <%= f.submit "Checkout", method: :create %>
+  <%= simple_form_for(@order) do |f| %>
+    <% @order_items.each do |oi| %>
+      <%= f.hidden_field :order_item_ids, multiple: true, value: oi.id %>
+    <% end %>
+    <%= f.submit "Checkout", method: :create %>
+  <% end %>
 <% end %>
 
