--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -22,7 +22,11 @@
         </a>
         </li>
       <li class="nav-item dropdown ml-3">
-        <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+        <% if current_user.avatar.attached? %>
+          <img class="avatar dropdown-toggle" id="navbarDropdown" data=toggle:dropdown aria-haspopup=true aria-expanded=false src="https://res.cloudinary.com/dcm2heeuf/image/upload/v1620723373/<%=user.avatar.key %>">
+          <% else %>
+           <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <% end %>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
           <%= link_to "My Crop Listings", "/my-listings", class: "dropdown-item" %>
           <%= link_to "My Transaction History", "#", class: "dropdown-item" %>
