cleanup and completed confirmation page

--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -2,6 +2,8 @@
   display: inline-flex;
   height: 80%;
   width: 70%;
+  color: grey;
+  border: 2px grey;
 }
 
 .search .search_icon {
@@ -9,3 +11,4 @@
   color: grey;
   border: 2px grey;
 }
+
