--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,18 +1,60 @@
-<div class="container">
+<div class="row">
 
-  <h2>Transaction Confirmation</h2>
+  <div class="col-sm-12" style="margin-top: 30px">
+    <h2>Transaction Confirmation</h2>
+  </div>
 
-  <p>
+  <!-- TRANSACTIONS DETAILS-->
+
+  <div class="col-sm-12" style="margin-top: 20px">
+    <h6>Your ordered items:</h6>
     <% @order.order_items.each do |item| %>
     <%= render "card-products", item: item %>
-    <% end %>
-  </p>
+     <% end %>
 
-  <h4>
-    TOTAL AMOUNT: $<%= @order.total_amounts %>
-  </h4>
+    <div class="col-sm-12" style="background-color: grey; text-align: right; padding:8px">
+      <h5>TOTAL AMOUNT: $<%= @order.total_amounts %></h5>
+    </div>
+  </div>
+
+  <!-- GROCER/SELLER DETAILS -->
+
+  <div class="col-sm-12" style="margin-top: 20px">
+    <h6>Your grocer:</h6>
+    <div class="card-product-big-avatar" style="min-height: 200px">
+      <% @order.order_items.limit(1).each do |item| %>
+      <% user = User.find(item.listing.user_id) %>
+      <%= render "shared/user-avatar", user: user %>
+
+      <div class="col-lg-12" style="background-color: white; border: grey 1px; margin-left: 10px">
+        <% user = User.find(item.listing.user_id) %>
+        <p><strong>Name: </strong><%= user.username %></p>
+        <p><strong>Contact: </strong><%= user.email %></p>
+        <p><strong>Address: </strong><%= user.address %></p>
+      </div>
+    </div>
+  </div>
 
 
+  <!-- CUSTOMER DETAILS -->
+
+  <div class="col-sm-12" style="margin-top: 20px">
+    <h6>Your details:</h6>
+    <div class="card-product-big-avatar" style="min-height: 200px">
+      <% user = User.find(item.user_id) %>
+      <%= render "shared/user-avatar", user: user %>
+
+      <div class="col-lg-12" style="background-color: white; border: grey 1px; margin-left: 10px">
+        <% user = User.find(item.user_id) %>
+        <p>Name: </strong><%= user.username %></p>
+        <p><strong>Contact: </strong><%= user.email %></p>
+        <p><strong>Address: </strong><%= user.address %></p>
+      </div>
+    </div>
+
+<% end %>
+  </div>
 </div>
+
 
 
