--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,40 +5,44 @@
   <% end %>
 
   <form novalidate="novalidate" class="simple_form search" action="/" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="&#x2713;" />
-  <%= form_with url: "/", method: :get, local: true, class: 'simple_form search' do |form| %>
+    <%= form_with url: "/", method: :get, local: true, class: 'simple_form search' do |form| %>
     <%= form.select :category, ["Fresh Vegetables", "Frozen Vegetables", "Ready To Eat Salads", "Grow Your Own Microgreens", "Other Vegetables"], prompt: "Select category" %>
     <div class="search">
       <%= form.text_field :search_query, class: "form-control string required", id: "search_query", placeholder: "Vegetables" %>
-      <%= form.submit "Search", class: "search_icon" %>
-    </div>
-  <% end %>
-  </form>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <% if user_signed_in? %>
+      <button name="button" type="submit" class="search_icon">
+        <i class="fas fa-search"></i>
+
+      </div>
+      <% end %>
+    </form>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <% if user_signed_in? %>
         <li class="nav-item active">
           <a href="/my-cart" class="btn btn-success">
-          My Cart <span class="badge badge-light"><%= current_user.order_items.select { |item|  item.order_id.nil? }.count %></span>
-        </a>
+            My Cart <span class="badge badge-light"><%= current_user.order_items.select { |item|  item.order_id.nil? }.count %></span>
+          </a>
         </li>
-      <li class="nav-item dropdown ml-3">
-        <% if current_user.avatar.attached? %>
+        <li class="nav-item dropdown ml-3">
+          <% if current_user.avatar.attached? %>
           <img class="avatar dropdown-toggle" id="navbarDropdown" data=toggle:dropdown aria-haspopup=true aria-expanded=false src="https://res.cloudinary.com/dcm2heeuf/image/upload/v1620723373/<%=user.avatar.key %>">
           <% else %>
-           <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <%= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <% end %>
-        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-          <%= link_to "My Crop Listings", "/my-listings", class: "dropdown-item" %>
-          <%= link_to "My Transaction History", "#", class: "dropdown-item" %>
-          <%= link_to "Edit Profile", "/users/edit", class: "dropdown-item" %>
-          <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
-        </div>
-      </li>
-      <% else %>
-      <li class="nav-item">
-        <%= link_to "Login", new_user_session_path, class: "nav-link" %>
-      </li>
-      <% end %>
-    </ul>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+            <%= link_to "List New Crops", "/listings/new", class: "dropdown-item" %>
+            <%= link_to "All My Crop Listings", "/my-listings", class: "dropdown-item" %>
+            <%= link_to "My Transaction History", "#", class: "dropdown-item" %>
+            <hr>
+            <%= link_to "Edit Profile", "/users/edit", class: "dropdown-item" %>
+            <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+          </div>
+        </li>
+        <% else %>
+        <li class="nav-item">
+          <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+        </li>
+        <% end %>
+      </ul>
+    </div>
   </div>
-</div>
