--- a/app/views/order_items/my_cart.html.erb
+++ b/app/views/order_items/my_cart.html.erb
@@ -4,6 +4,7 @@
     <% if @order_items.empty? %>
     <h2>Your cart is empty.</h2>
     <h4>🥕 aint gonna add themselves!</h4>
+
     <% else %>
     <div class="col-sm-12" style="text-align: left; vertical-align: top">
 
@@ -15,10 +16,49 @@
       <% @order_items.each do |oi| %>
       <%= f.hidden_field :order_item_ids, multiple: true, value: oi.id %>
       <% end %>
+      <div class="col-sm-12" style="background-color: grey; text-align: right; padding:8px">
+        <h5>
+          TOTAL AMOUNT:
+          <% total = 0 %>
+          <% @order_items.each do |item| %>
+          <% total +=item.amount%>
+          <% end %>
+          <%= total %>
+        </h5>
+      </div>
       <%= f.submit "Checkout", method: :create, class: "btn btn-danger w-100" %>
       <% end %>
-      <% end %>
+
+      <!-- MIDDLE RACK -2 - SAME CATEGORY, OTHER LISTINGS -->
+
+      <hr>
+
+      <div class="row">
+        <div class="col-lg-12" style="margin-top: 20px">
+          People also ordered these
+          <% listing_id = @order_items.first.listing_id %>
+          <% item = Listing.where(id: listing_id)%>
+          <% item.each do |x| %>
+          <%= x.category %>
+        </div>
+
+        <div class="row" style="padding: 12px">
+          <div class="col-lg 12">
+            <div class="cards-small">
+              <% Listing.where(category: x.category).limit(5).each do |listing| %>
+              <div class="card-small">
+                <%= render "shared/listing-image", listing: listing %>
+                <%= render "shared/cards-of-5-rack", listing: listing %>
+              </div>
+
+              <% end %>
+              <% end %>
+              <% end %>
+
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
-
