--- a/app/views/shared/_card-product.html.erb
+++ b/app/views/shared/_card-product.html.erb
@@ -8,7 +8,8 @@
       <h2><%= item.listing.title %></h2>
       <div class="box">
         <p>Quantity: <%= item.quantity %></p>
-        <p>Price: $<%= item.amount %></p>
+        <p>Unit Price: $<%= item.listing.unit_price %></p>
+        <p><strong>Sub Total: $<%= item.amount %></strong></p>
       </div>
     </div>
     <div class="row d-flex flex-row justify-content-between align-items-end px-3">
