--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -64,7 +64,7 @@
     <div class="col-lg-12" style="margin-top: 20px">
       <h5><strong>Meet the Grocer</strong></h5>
 
-      <div class="card-product-big-avatar" style="min-height: 200px">
+      <div class="card-product-big-avatar" style="min-height: 200px; border-radius: 5px">
         <% user = User.find(@listing.user_id) %>
         <%= render "shared/user-avatar", user: user %>
 
