--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -2,7 +2,7 @@
   <div class="col-sm-12" style="text-align: center; margin-top: 30px">
 
     <% if @orders.empty? %>
-    <h2>Your have no transactions yet.</h2>
+    <h2>You have no transactions yet.</h2>
     <h4>🛸 looks sad..</h4>
 
     <% else %>
