transaction page brute fix

--- a/app/views/order_items/my_cart.html.erb
+++ b/app/views/order_items/my_cart.html.erb
@@ -6,7 +6,7 @@
     <h4>🥕 aint gonna add themselves!</h4>
 
     <% else %>
-    <div class="col-sm-12" style="text-align: left; vertical-align: top;">
+    <div class="col-sm-12" style="text-align: left; vertical-align: top; margin-top: 20px">
 
       <!-- LIST ORDER ITEMS -->
       <h2>Here are your items in cart</h2>
