--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -40,7 +40,7 @@
     <% end %>
   </div>
   <% end %>
-  <%= render "shared/editorial" %>
 </div>
-
+<%= render "shared/editorial" %>
+</div>
 </div>
