--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -27,6 +27,7 @@
                 hint: "leave it blank if you don't want to change it",
                 required: false,
                 input_html: { autocomplete: "new street address" } %>
+    <%= f.input :avatar, as: :file %>
   </div>
 
   <div class="form-actions">
