--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -24,7 +24,7 @@
                 required: true,
                 autofocus: true,
                 input_html: { autocomplete: "street address" }%>
-
+    <%= f.input :avatar, as: :file %>
   </div>
 
   <div class="form-actions">
