--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -8,12 +8,13 @@
         <%= f.label :description%><br>
         <%= f.text_field :description%><br><br>
         <%= f.label :category%><br>
-        <%= f.text_field :category%><br><br>
+        <%= f.select :category, ["Fresh Vegetables", "Frozen Vegetables", "Ready To Eat Salads", "Grow Your Own Microgreens", "Other Vegetables"]%><br><br>
         <%= f.label :quantity%><br>
         <%= f.text_field :quantity%><br><br>
         <%= f.label :unit_price%><br>
         <%= f.text_field :unit_price%><br><br>
         <%= f.input :expiry_date, as: :date %><br>
+        <%= f.input :photo, as: :file %>
       </div>
       <div class="button">
         <%= f.submit "Add", class: "btn btn-primary"%>
@@ -22,4 +23,6 @@
       </div>
   </div>
 </div>
+
+
 
