--- a/app/views/order_items/my_cart.html.erb
+++ b/app/views/order_items/my_cart.html.erb
@@ -20,16 +20,16 @@
           TOTAL AMOUNT:
           <% total = 0 %>
           <% @order_items.each do |item| %>
-          $ <% total +=item.amount%>
+          <% total +=item.amount%>
           <% end %>
-          <%= total %>
+          $ <%= total %>
         </h6>
       </div>
 
       <!--       CHECKOUT -->
       <%= simple_form_for(@order) do |f| %>
       <% @order_items.each do |oi| %>
-        <%= f.hidden_field :order_item_ids, multiple: true, value: oi.id %>
+      <%= f.hidden_field :order_item_ids, multiple: true, value: oi.id %>
       <% end %>
       <%= f.submit "Checkout", method: :create, class: "btn btn-danger w-100" %>
       <% end %>
@@ -62,8 +62,7 @@
 
             </div>
           </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+
+
+
+
