--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -17,7 +17,7 @@
         <%= f.input :photo, as: :file %>
       </div>
       <div class="button">
-        <%= f.submit "Add", class: "btn btn-primary"%>
+        <%= f.submit "List Your Crops!", class: "btn btn-success w-100"%>
       </div>
         <% end %>
       </div>
