--- a/app/views/shared/_editorial.html.erb
+++ b/app/views/shared/_editorial.html.erb
@@ -62,7 +62,7 @@
   <div class="row" style="padding: 12px">
     <div class="col-lg 12">
       <div class="cards-small">
-        <% @listingsall.where(category: "Grow Your Own Microgreens").each do |listing| %>
+        <% @listingsall.where(category: "Grow Your Own Microgreens").limit(5).each do |listing| %>
         <div class="card-small">
           <%= render "shared/listing-image", listing: listing %>
           <%= render "shared/cards-of-5-rack", listing: listing %>
