--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -61,6 +61,12 @@
         <p><strong>Address: </strong><%= user.address %></p>
       </div>
     </div>
+
+    <div id="map"
+     style="width: 100%; height: 600px;"
+     data-markers="<%= @markers.to_json %>"
+     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
+
   </div>
 
 
